	  printer/Samsung-ML-7000N.xml, driver/gimp-print.xml,
	  driver/lj4dith.xml, driver/lj5gray.xml, driver/lj5mono.xml,
	  driver/ljet4.xml, driver/pxlmono.xml, opt/159.xml, opt/160.xml,
	  opt/6.xml, opt/Postscript-Resolution.xml,
	  opt/pxlmono-PrinterResolution.xml: Split the entries for the
	  Samsung ML-6000 and ML-7000 series into individual printers.

2006-02-21  George Liu <george.liu@ussj.ricoh.com>

	* printer/: Updated 388 Ricoh Family and OEM xml files.

2006-02-21  George Liu <george.liu@ussj.ricoh.com>

	* PPD/ : Updated 566 Ricoh Family and OEM PPD files

2006-02-20  Tim Waugh <twaugh@redhat.com>

	* printer/Lexmark-Optra_E312.xml: Added IEEE 1284 information (RH
	  bug #181985).

2006-02-17  Till Kamppeter <till.kamppeter@gmx.net>

	* PPD/Kyocera/en/Kyocera_FS-920_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-C5020N_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-C5030N_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-6030_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-8030_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-1030_en.ppd: Added new PPDs from
	  Kyocera (Thanks to Markus Brauer, markus dot brauer at ktde dot
	  de, for this contribution).

	* PPD/Kyocera/en/Kyocera_FS-1714M_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-3718M_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-7028M_en.ppd: PPD bug fixes from
	  Kyocera (Thanks to Markus Brauer, markus dot brauer at ktde dot
	  de, for this contribution).

2006-02-14  Till Kamppeter <till.kamppeter@gmx.net>

	* PPD/Sharp/sc172fpj.ppd, PPD/Sharp/sc262fpj.ppd,
	  PPD/Sharp/shc262sj.ppd: PPDs for new Sharp printers (thanks to
	  Jens Stark, j dot stark at esbc dot sharp-eu dot com).

	* PPD/Sharp/shac260.ppd, PPD/Sharp/shac260m.ppd,
	  PPD/Sharp/shac260p.ppd, PPD/Sharp/shac170m.ppd,
	  PPD/Sharp/shabc320.ppd, PPD/Sharp/shabc260.ppd,
	  PPD/Sharp/shac262m.ppd, PPD/Sharp/shac172m.ppd,
	  PPD/Sharp/sc170fpj.ppd, PPD/Sharp/sc260fpj.ppd,
	  PPD/Sharp/sc261fpj.ppd, PPD/Sharp/shc260fj.ppd,
	  PPD/Sharp/shc260mj.ppd, PPD/Sharp/shc260sj.ppd,