@@ -11651,7 +11651,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/Kyocera-FS-600KPDL2</id>
+    <id>printer/Kyocera-FS-600_KPDL-2</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -21169,7 +21169,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/HP-LaserJet_3300</id>
+    <id>printer/HP-LaserJet_3300_MFP</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -21244,7 +21244,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/HP-LaserJet_3310</id>
+    <id>printer/HP-LaserJet_3310_MFP</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -21319,7 +21319,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/HP-LaserJet_3320</id>
+    <id>printer/HP-LaserJet_3320_MFP</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -21394,7 +21394,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/HP-LaserJet_3320N</id>
+    <id>printer/HP-LaserJet_3320N_MFP</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -21469,7 +21469,7 @@
     </margins>
   </printer>
   <printer>
-    <id>printer/HP-LaserJet_3330</id>
+    <id>printer/HP-LaserJet_3330_MFP</id>
     <margins>
       <exception PageSize="C6">
         <absolute />
@@ -26335,28 +26335,6 @@
     </margins>
   </printer>
   <!-- gutenprint driver: pcl-540 -->
-  <printer>
-    <id>printer/HP-DeskJet_400C</id>
-    <margins>
-      <general>
-        <relative />
-        <left>18</left>
-        <right>18</right>
-        <top>7</top>
-        <bottom>33</bottom>
-      </general>
-      <exception PageSize="w324h495">
-        <absolute />
-        <top>477</top>
-        <bottom>45</bottom>
-      </exception>
-      <exception PageSize="A4">
-        <absolute />
-        <left>10</left>
-        <right>585</right>
-      </exception>
-    </margins>
-  </printer>
   <printer>
     <id>printer/HP-DeskJet_420C</id>
     <margins>
