@@ -71,6 +71,8 @@
 	  opt/pxlmono-PrinterResolution.xml: Split the entries for the
 	  Samsung ML-6000 and ML-7000 series into individual printers.
 
+	* driver/gutenprint.xml: Corrected Foomatic IDs of some printers.
+
 2006-02-21  George Liu <george.liu@ussj.ricoh.com>
 
 	* printer/: Updated 388 Ricoh Family and OEM xml files.
